Visual changes III

--- a/BingeSeriesApp/BingeSeriesApp/Base.lproj/LaunchScreen.storyboard
+++ b/BingeSeriesApp/BingeSeriesApp/Base.lproj/LaunchScreen.storyboard
@@ -30,7 +30,7 @@
                             </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" red="0.083048159487545639" green="0.28209883193888252" blue="0.42425535221689759" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.0" green="0.22031113660000001" blue="0.42425535219999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="0pN-Ka-Y71" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="15" id="4WF-27-sG4"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="0pN-Ka-Y71" secondAttribute="bottom" constant="150" id="6gq-XP-yU3"/>
