--- a/BingeSeriesApp/BingeSeriesApp/Login/View/LoginViewController.xib
+++ b/BingeSeriesApp/BingeSeriesApp/Login/View/LoginViewController.xib
@@ -10,6 +10,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoginViewController" customModule="BingeSeriesApp" customModuleProvider="target">
             <connections>
+                <outlet property="loginButton" destination="EZe-4V-1ZJ" id="0Z6-fU-cdz"/>
+                <outlet property="passwordTextField" destination="L15-ao-YA7" id="EjY-Gs-kRD"/>
+                <outlet property="rememberSwitch" destination="yHr-rM-vgq" id="ggB-2V-qGG"/>
+                <outlet property="userTextField" destination="WGz-8Y-h7e" id="cd6-dw-Wfc"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -22,77 +26,66 @@
                     <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WELCOME!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KiE-9y-xyI">
-                            <rect key="frame" x="25" y="200" width="364" height="38"/>
-                            <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="30"/>
-                            <nil key="textColor"/>
+                            <rect key="frame" x="25" y="150" width="364" height="44.5"/>
+                            <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="35"/>
+                            <color key="textColor" systemColor="systemYellowColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WGz-8Y-h7e">
-                            <rect key="frame" x="35" y="428" width="329" height="34"/>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WGz-8Y-h7e">
+                            <rect key="frame" x="35" y="384.5" width="329" height="34"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YUE-va-gBt">
-                            <rect key="frame" x="40" y="482" width="70" height="25"/>
-                            <fontDescription key="fontDescription" name="ChalkboardSE-Regular" family="Chalkboard SE" pointSize="17"/>
-                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="L15-ao-YA7">
-                            <rect key="frame" x="35" y="512" width="329" height="34"/>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="L15-ao-YA7">
+                            <rect key="frame" x="35" y="468.5" width="329" height="34"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <textInputTraits key="textInputTraits"/>
+                            <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                         </textField>
                         <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="yHr-rM-vgq">
-                            <rect key="frame" x="35" y="626" width="51" height="31"/>
+                            <rect key="frame" x="35" y="582.5" width="51" height="31"/>
                         </switch>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remeber user" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qy9-T2-UcY">
-                            <rect key="frame" x="109" y="626" width="255" height="25"/>
+                            <rect key="frame" x="109" y="582.5" width="255" height="25"/>
                             <fontDescription key="fontDescription" name="ChalkboardSE-Regular" family="Chalkboard SE" pointSize="17"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EZe-4V-1ZJ">
-                            <rect key="frame" x="178" y="801" width="59" height="31"/>
+                            <rect key="frame" x="160" y="682.5" width="94" height="31"/>
+                            <color key="backgroundColor" systemColor="systemYellowColor"/>
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <state key="normal" title="Button"/>
-                            <buttonConfiguration key="configuration" style="tinted" title="Enter"/>
+                            <buttonConfiguration key="configuration" style="plain" title="Enter">
+                                <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </buttonConfiguration>
+                            <connections>
+                                <action selector="login:" destination="-1" eventType="touchUpInside" id="eUF-G0-Nf8"/>
+                            </connections>
                         </button>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="User" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UgD-V3-I44">
-                            <rect key="frame" x="40" y="398" width="36" height="25"/>
-                            <fontDescription key="fontDescription" name="ChalkboardSE-Regular" family="Chalkboard SE" pointSize="17"/>
-                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <nil key="highlightedColor"/>
-                        </label>
                     </subviews>
-                    <color key="backgroundColor" red="0.1843137255" green="0.43137254899999999" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    <color key="backgroundColor" red="0.0" green="0.22031113660000001" blue="0.42425535219999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
-                        <constraint firstItem="KiE-9y-xyI" firstAttribute="top" secondItem="s9i-ik-wyk" secondAttribute="top" constant="200" id="1Ik-aW-Kdf"/>
-                        <constraint firstItem="WGz-8Y-h7e" firstAttribute="top" secondItem="UgD-V3-I44" secondAttribute="bottom" constant="5" id="1h8-ot-gxr"/>
-                        <constraint firstItem="WGz-8Y-h7e" firstAttribute="leading" secondItem="s9i-ik-wyk" secondAttribute="leading" constant="35" id="Ibm-CJ-u6K"/>
-                        <constraint firstItem="EZe-4V-1ZJ" firstAttribute="leading" secondItem="s9i-ik-wyk" secondAttribute="leading" constant="178" id="Mg4-Yk-rqn"/>
-                        <constraint firstItem="YUE-va-gBt" firstAttribute="top" secondItem="WGz-8Y-h7e" secondAttribute="bottom" constant="20" id="N1V-VJ-P5P"/>
-                        <constraint firstItem="L15-ao-YA7" firstAttribute="leading" secondItem="s9i-ik-wyk" secondAttribute="leading" constant="35" id="O6H-dP-lk9"/>
-                        <constraint firstItem="yHr-rM-vgq" firstAttribute="top" secondItem="L15-ao-YA7" secondAttribute="bottom" constant="80" id="OiK-yO-dxg"/>
-                        <constraint firstItem="YUE-va-gBt" firstAttribute="leading" secondItem="s9i-ik-wyk" secondAttribute="leading" constant="40" id="VNd-05-UKX"/>
-                        <constraint firstItem="yHr-rM-vgq" firstAttribute="leading" secondItem="s9i-ik-wyk" secondAttribute="leading" constant="35" id="YDo-i7-uHr"/>
-                        <constraint firstAttribute="trailing" secondItem="L15-ao-YA7" secondAttribute="trailing" constant="50" id="YGu-3f-Ges"/>
-                        <constraint firstItem="EZe-4V-1ZJ" firstAttribute="top" secondItem="Qy9-T2-UcY" secondAttribute="bottom" constant="150" id="cfO-Kr-XeE"/>
-                        <constraint firstItem="L15-ao-YA7" firstAttribute="top" secondItem="YUE-va-gBt" secondAttribute="bottom" constant="5" id="cqv-D9-bHv"/>
-                        <constraint firstAttribute="trailing" secondItem="KiE-9y-xyI" secondAttribute="trailing" constant="25" id="eqP-zY-JAQ"/>
-                        <constraint firstItem="KiE-9y-xyI" firstAttribute="leading" secondItem="s9i-ik-wyk" secondAttribute="leading" constant="25" id="fAk-Xu-SNA"/>
-                        <constraint firstItem="UgD-V3-I44" firstAttribute="top" secondItem="KiE-9y-xyI" secondAttribute="bottom" constant="160" id="gv7-Yv-hHM"/>
-                        <constraint firstItem="Qy9-T2-UcY" firstAttribute="leading" secondItem="yHr-rM-vgq" secondAttribute="trailing" constant="25" id="htU-tA-14C"/>
-                        <constraint firstItem="Qy9-T2-UcY" firstAttribute="top" secondItem="L15-ao-YA7" secondAttribute="bottom" constant="80" id="jbF-gI-XVn"/>
-                        <constraint firstItem="UgD-V3-I44" firstAttribute="leading" secondItem="s9i-ik-wyk" secondAttribute="leading" constant="40" id="ly1-Rp-Nzd"/>
-                        <constraint firstAttribute="trailing" secondItem="EZe-4V-1ZJ" secondAttribute="trailing" constant="177" id="qbW-yf-fxg"/>
-                        <constraint firstAttribute="trailing" secondItem="WGz-8Y-h7e" secondAttribute="trailing" constant="50" id="wNL-VQ-fS1"/>
-                        <constraint firstAttribute="trailing" secondItem="Qy9-T2-UcY" secondAttribute="trailing" constant="50" id="xeH-Ot-U01"/>
+                        <constraint firstItem="EZe-4V-1ZJ" firstAttribute="top" secondItem="Qy9-T2-UcY" secondAttribute="bottom" constant="75" id="0GN-bN-yoi"/>
+                        <constraint firstItem="WGz-8Y-h7e" firstAttribute="top" secondItem="KiE-9y-xyI" secondAttribute="bottom" constant="190" id="1aY-cq-2Gr"/>
+                        <constraint firstAttribute="trailing" secondItem="EZe-4V-1ZJ" secondAttribute="trailing" constant="160" id="29t-Bc-Ykh"/>
+                        <constraint firstAttribute="trailing" secondItem="L15-ao-YA7" secondAttribute="trailing" constant="50" id="85t-02-I1E"/>
+                        <constraint firstAttribute="trailing" secondItem="KiE-9y-xyI" secondAttribute="trailing" constant="25" id="9OX-gC-t71"/>
+                        <constraint firstAttribute="trailing" secondItem="WGz-8Y-h7e" secondAttribute="trailing" constant="50" id="MOE-ra-6gH"/>
+                        <constraint firstAttribute="trailing" secondItem="Qy9-T2-UcY" secondAttribute="trailing" constant="50" id="P5d-Bt-oWk"/>
+                        <constraint firstItem="KiE-9y-xyI" firstAttribute="leading" secondItem="s9i-ik-wyk" secondAttribute="leading" constant="25" id="VuC-M7-a0Z"/>
+                        <constraint firstItem="L15-ao-YA7" firstAttribute="top" secondItem="WGz-8Y-h7e" secondAttribute="bottom" constant="50" id="YDg-Ch-edC"/>
+                        <constraint firstItem="Qy9-T2-UcY" firstAttribute="top" secondItem="L15-ao-YA7" secondAttribute="bottom" constant="80" id="az3-2D-FiE"/>
+                        <constraint firstItem="yHr-rM-vgq" firstAttribute="leading" secondItem="s9i-ik-wyk" secondAttribute="leading" constant="35" id="b4n-mE-nin"/>
+                        <constraint firstItem="WGz-8Y-h7e" firstAttribute="leading" secondItem="s9i-ik-wyk" secondAttribute="leading" constant="35" id="dQM-yL-auV"/>
+                        <constraint firstItem="yHr-rM-vgq" firstAttribute="top" secondItem="L15-ao-YA7" secondAttribute="bottom" constant="80" id="h4o-jP-DWZ"/>
+                        <constraint firstItem="EZe-4V-1ZJ" firstAttribute="leading" secondItem="s9i-ik-wyk" secondAttribute="leading" constant="160" id="hlH-Lq-ZVA"/>
+                        <constraint firstItem="KiE-9y-xyI" firstAttribute="top" secondItem="s9i-ik-wyk" secondAttribute="top" constant="150" id="jtE-3U-aez"/>
+                        <constraint firstItem="Qy9-T2-UcY" firstAttribute="leading" secondItem="yHr-rM-vgq" secondAttribute="trailing" constant="25" id="m8P-AK-70A"/>
+                        <constraint firstItem="L15-ao-YA7" firstAttribute="leading" secondItem="s9i-ik-wyk" secondAttribute="leading" constant="35" id="z9w-TY-0fy"/>
                     </constraints>
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="s9i-ik-wyk" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="C4H-0b-Ha9"/>
                 <constraint firstItem="s9i-ik-wyk" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="DXy-zm-EF2"/>
@@ -103,8 +96,8 @@
         </view>
     </objects>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
