--- a/BingeSeriesApp/BingeSeriesApp/DetailView/View/DetailSeriesView.xib
+++ b/BingeSeriesApp/BingeSeriesApp/DetailView/View/DetailSeriesView.xib
@@ -11,6 +11,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DetailSeriesView" customModule="BingeSeriesApp" customModuleProvider="target">
             <connections>
                 <outlet property="imageSerie" destination="sTt-wm-tXB" id="hDE-qr-oUO"/>
+                <outlet property="likeButton" destination="Ccj-Nn-QHY" id="yD7-8A-1CA"/>
                 <outlet property="releaseDateLabel" destination="Xjo-o9-GNA" id="yrd-am-jNU"/>
                 <outlet property="sinopsisLabel" destination="8AK-LY-AbT" id="6hn-fg-Ci0"/>
                 <outlet property="titleSerie" destination="7dC-eC-fP7" id="SM4-A4-1jQ"/>
@@ -19,70 +20,83 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
+        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" ambiguous="YES" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CsZ-z6-7Br">
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CsZ-z6-7Br">
                     <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nvG-b4-tIx">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="1150"/>
+                            <rect key="frame" x="0.0" y="0.0" width="409" height="1150"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="QUc-my-egP">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="1150"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="409" height="1150"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cTI-So-DiJ">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="1150"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="409" height="1150"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7dC-eC-fP7">
-                                                    <rect key="frame" x="25" y="50" width="364" height="35.5"/>
+                                                    <rect key="frame" x="25" y="50" width="359" height="35.5"/>
                                                     <fontDescription key="fontDescription" name="ChalkboardSE-Bold" family="Chalkboard SE" pointSize="25"/>
                                                     <color key="textColor" red="0.0" green="0.22031113660000001" blue="0.42425535219999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sTt-wm-tXB">
-                                                    <rect key="frame" x="40" y="110.5" width="334" height="500"/>
+                                                    <rect key="frame" x="40" y="110.5" width="329" height="500"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="500" id="HZM-1I-RLp"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sinopsis:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="njy-T1-XcT">
-                                                    <rect key="frame" x="25" y="650.5" width="364" height="28.5"/>
+                                                    <rect key="frame" x="25" y="650.5" width="359" height="28.5"/>
                                                     <fontDescription key="fontDescription" name="ChalkboardSE-Bold" family="Chalkboard SE" pointSize="20"/>
                                                     <color key="textColor" red="0.0" green="0.22031113660000001" blue="0.42425535219999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8AK-LY-AbT">
-                                                    <rect key="frame" x="25" y="694" width="364" height="21"/>
+                                                    <rect key="frame" x="25" y="694" width="359" height="21"/>
                                                     <fontDescription key="fontDescription" name="Charter-Roman" family="Charter" pointSize="17"/>
                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fecha de Inicio:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5hZ-bk-d74">
-                                                    <rect key="frame" x="25" y="755" width="364" height="28.5"/>
+                                                    <rect key="frame" x="25" y="755" width="359" height="28.5"/>
                                                     <fontDescription key="fontDescription" name="ChalkboardSE-Bold" family="Chalkboard SE" pointSize="20"/>
                                                     <color key="textColor" red="0.0" green="0.22031113660000001" blue="0.42425535219999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xjo-o9-GNA">
-                                                    <rect key="frame" x="25" y="798.5" width="364" height="21"/>
+                                                    <rect key="frame" x="25" y="798.5" width="359" height="21"/>
                                                     <fontDescription key="fontDescription" name="Charter-Roman" family="Charter" pointSize="17"/>
                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Calificación media:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c77-wa-4xb">
-                                                    <rect key="frame" x="25" y="844.5" width="364" height="28.5"/>
+                                                    <rect key="frame" x="25" y="844.5" width="359" height="28.5"/>
                                                     <fontDescription key="fontDescription" name="ChalkboardSE-Bold" family="Chalkboard SE" pointSize="20"/>
                                                     <color key="textColor" red="0.0" green="0.22031113660000001" blue="0.42425535219999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tw8-dZ-Na4">
-                                                    <rect key="frame" x="25" y="888" width="364" height="21"/>
+                                                    <rect key="frame" x="25" y="888" width="359" height="21"/>
                                                     <fontDescription key="fontDescription" name="Charter-Roman" family="Charter" pointSize="17"/>
                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ccj-Nn-QHY">
+                                                    <rect key="frame" x="339" y="618" width="30" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="AWw-gj-1LY"/>
+                                                        <constraint firstAttribute="width" constant="30" id="zel-nj-kpn"/>
+                                                    </constraints>
+                                                    <color key="tintColor" red="0.083048159489999995" green="0.28209883190000001" blue="0.42425535219999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <state key="normal" title="Button"/>
+                                                    <buttonConfiguration key="configuration" style="plain" image="suit.heart" catalog="system" title=" "/>
+                                                    <connections>
+                                                        <action selector="addToLikeAction:" destination="-1" eventType="touchUpInside" id="RbS-bY-jez"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                             <constraints>
@@ -96,6 +110,7 @@
                                                 <constraint firstItem="Xjo-o9-GNA" firstAttribute="top" secondItem="5hZ-bk-d74" secondAttribute="bottom" constant="15" id="HMO-xD-hQ9"/>
                                                 <constraint firstAttribute="trailing" secondItem="Tw8-dZ-Na4" secondAttribute="trailing" constant="25" id="J9b-at-3vD"/>
                                                 <constraint firstItem="Tw8-dZ-Na4" firstAttribute="top" secondItem="c77-wa-4xb" secondAttribute="bottom" constant="15" id="K9J-EW-htd"/>
+                                                <constraint firstAttribute="trailing" secondItem="Ccj-Nn-QHY" secondAttribute="trailing" constant="40" id="LJl-4j-UDc"/>
                                                 <constraint firstItem="c77-wa-4xb" firstAttribute="top" secondItem="Xjo-o9-GNA" secondAttribute="bottom" constant="25" id="QDQ-oD-oRo"/>
                                                 <constraint firstItem="8AK-LY-AbT" firstAttribute="leading" secondItem="cTI-So-DiJ" secondAttribute="leading" constant="25" id="Uoq-hO-vGb"/>
                                                 <constraint firstAttribute="trailing" secondItem="c77-wa-4xb" secondAttribute="trailing" constant="25" id="V9h-WC-ucO"/>
@@ -106,10 +121,12 @@
                                                 <constraint firstAttribute="height" constant="1150" id="dpr-eA-Xi1"/>
                                                 <constraint firstItem="8AK-LY-AbT" firstAttribute="top" secondItem="njy-T1-XcT" secondAttribute="bottom" constant="15" id="eGa-aa-3P6"/>
                                                 <constraint firstAttribute="trailing" secondItem="5hZ-bk-d74" secondAttribute="trailing" constant="25" id="fpQ-1C-vT0"/>
+                                                <constraint firstItem="Ccj-Nn-QHY" firstAttribute="leading" secondItem="cTI-So-DiJ" secondAttribute="leading" constant="339" id="gZh-WX-sTD"/>
                                                 <constraint firstItem="sTt-wm-tXB" firstAttribute="top" secondItem="7dC-eC-fP7" secondAttribute="bottom" constant="25" id="mE2-zj-K54"/>
                                                 <constraint firstAttribute="trailing" secondItem="8AK-LY-AbT" secondAttribute="trailing" constant="25" id="oIC-Xe-0DV"/>
                                                 <constraint firstItem="7dC-eC-fP7" firstAttribute="top" secondItem="cTI-So-DiJ" secondAttribute="top" constant="50" id="uAu-ii-eQ1"/>
                                                 <constraint firstAttribute="trailing" secondItem="Xjo-o9-GNA" secondAttribute="trailing" constant="25" id="wqm-gE-DE6"/>
+                                                <constraint firstItem="Ccj-Nn-QHY" firstAttribute="top" secondItem="sTt-wm-tXB" secondAttribute="bottom" constant="7.5" id="xK7-Xc-Tef"/>
                                                 <constraint firstItem="7dC-eC-fP7" firstAttribute="leading" secondItem="cTI-So-DiJ" secondAttribute="leading" constant="25" id="yoH-E1-aWP"/>
                                                 <constraint firstItem="c77-wa-4xb" firstAttribute="leading" secondItem="cTI-So-DiJ" secondAttribute="leading" constant="25" id="ytW-ol-Sf8"/>
                                                 <constraint firstItem="Tw8-dZ-Na4" firstAttribute="leading" secondItem="cTI-So-DiJ" secondAttribute="leading" constant="25" id="yxm-rh-vh6"/>
@@ -150,6 +167,7 @@
         </view>
     </objects>
     <resources>
+        <image name="suit.heart" catalog="system" width="128" height="109"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
